## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libevent0.la

libevent0_la_SOURCES = 	http.c evhttp.h evhttps.h \
			bufevent.c bufevent.h \
			evutil_ssl.h evutil_ssl.c

library_includedir=$(includedir)/event0
library_include_HEADERS = bufevent.h evhttp.h evhttps.h evutil_ssl.h
